--- a/src/pages/index.xhtml
+++ b/src/pages/index.xhtml
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="Theodia, micronation, technocracy"/> <!-- subdomain -->
 		<meta name="description" content="The official website of the Technocratic Republic of Theodia"/> <!-- subdomain -->
 		<meta name="author" content="Miles Bradley Huff"/> <!-- global -->
-		<!--<base target="_blank" href="https://en.theodia.tech"/>--> <!-- subdomain -->
+		<!--<base target="_blank" href="https://www.theodia.tech"/>--> <!-- subdomain -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico"/> <!-- subdomain -->
 		<script type="text/javascript" src="global.js"></script>
 		<script type="text/javascript" src="www.js"></script>
