--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-us" xml:lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<!-- Common to every page on the website -->
-		<meta charset="utf-8"/>
-		<meta name="revisit-after" content="144 day"/>
-		<meta name="author" content="Miles Bradley Huff"/>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-		<link rel="stylesheet" type="text/css" src="_styles/global.css"/>
-		<script type="text/javascript" src="_scripts/global.js"></script>
-
-		<!-- Common to the subdomain -->
-		<meta name="keywords" content="Theodia, micronation, technocracy"/>
-		<meta name="description" content="The official website of the Technocratic Republic of Theodia"/>
-		<!--<base target="_blank" href="https://www.theodia.tech"/>-->
-		<link rel="icon" type="image/x-icon" href="favicon.ico"/>
-
-		<!-- Page-specific -->
-		<meta name="robots" content="index, follow"/>
-		<title>Theodia, the Technocratic Republic - Home</title>
+		<!-- Global    --><meta                      charset="utf-8"/>
+		<!-- Page      --><meta name="robots"        content="index, follow"/>
+		<!-- Global    --><meta name="revisit-after" content="144 day"/>
+		<!-- Subdomain --><meta name="keywords"      content="Theodia, micronation, technocracy"/>
+		<!-- Page      --><title>Theodia, the Technocratic Republic - Home</title>
+		<!-- Subdomain --><meta name="description"   content="The official website of the Technocratic Republic of Theodia"/>
+		<!-- Global    --><meta name="author"        content="Miles Bradley Huff"/>
+		<!-- Global    --><meta name="viewport"      content="width=device-width,initial-scale=1.0"/>
+		<!-- Subdomain --><!--<base                       target="_blank"       href="https://www.theodia.tech"/>-->
+		<!-- Subdomain --><link   rel="icon"            type="image/x-icon" href="favicon.ico"/>
+		<!-- Global    --><link   rel="stylesheet"      type="text/css"      src="_styles/global.css"/>
+		<!-- Global    --><script                       type="text/javascript" src="_scripts/global.js"></script>
+		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"      src="_styles/subdomain.css"/>-->
+		<!-- Subdomain --><!--<script                       type="text/javascript" src="_scripts/subdomain.js"></script>-->
 	</head>
 <!----------------------------------------------------------------------------->
-	<body class="grid">
+	<body onload="Global.activateTheme();Strings.injectText();" class="grid">
 		<div style="grid-area:1/1/span 1/span 2" id="header"></div>
 		<div style="grid-area:2/1/span 1/span 1" id="sidebar"></div>
-		<p   style="grid-area:2/2/span 1/span 1">Lorem ipsum dolor sit amet</p>
+		<p   style="grid-area:2/2/span 1/span 1" id="placeholderShort"></p>
 		<div style="grid-area:3/1/span 1/span 2" id="footer"></div>
 	</body>
 </html>
