Relicensed again. Also added license boilerplates.

--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- Copyright © from the date of the last git commit to this file in this git
+     branch, by all persons with git blame to this file in this git branch, per
+	 the terms of the GNU AGPL 3.0 with the additional allowances of the GNU
+	 LGPL 3.0. -->
 <html lang="en-us" xml:lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<!-- Global    --><meta                      charset="utf-8"/>
@@ -10,10 +14,10 @@
 		<!-- Global    --><meta name="author"        content="Miles Bradley Huff"/>
 		<!-- Global    --><meta name="viewport"      content="width=device-width,initial-scale=1.0"/>
 		<!-- Subdomain --><!--<base                       target="_blank"       href="https://www.theodia.tech"/>-->
-		<!-- Subdomain --><link   rel="icon"            type="image/x-icon" href="favicon.ico"/>
-		<!-- Global    --><link   rel="stylesheet"      type="text/css"      src="_styles/global.css"/>
+		<!-- Subdomain --><link   rel="icon"            type="image/x-icon"   href="favicon.ico"/>
+		<!-- Global    --><link   rel="stylesheet"      type="text/css"        src="_styles/global.css"/>
 		<!-- Global    --><script                       type="text/javascript" src="_scripts/global.js"></script>
-		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"      src="_styles/subdomain.css"/>-->
+		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"        src="_styles/subdomain.css"/>-->
 		<!-- Subdomain --><!--<script                       type="text/javascript" src="_scripts/subdomain.js"></script>-->
 	</head>
 <!----------------------------------------------------------------------------->
