--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -15,13 +15,13 @@
 		<!-- Global    --><meta name="viewport"      content="width=device-width,initial-scale=1.0"/>
 		<!-- Subdomain --><!--<base                       target="_blank"       href="https://www.theodia.tech"/>-->
 		<!-- Subdomain --><link   rel="icon"            type="image/x-icon"   href="favicon.ico"/>
-		<!-- Global    --><link   rel="stylesheet"      type="text/css"        src="_styles/global.css"/>
-		<!-- Global    --><script                       type="text/javascript" src="_scripts/global.js"></script>
-		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"        src="_styles/subdomain.css"/>-->
-		<!-- Subdomain --><!--<script                       type="text/javascript" src="_scripts/subdomain.js"></script>-->
+		<!-- Global    --><link   rel="stylesheet"      type="text/css"        src="_thm/global.css"/>
+		<!-- Global    --><script                       type="text/javascript" src="_exe/global.js"></script>
+		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"        src="_thm/subdomain.css"/>-->
+		<!-- Subdomain --><!--<script                       type="text/javascript" src="_exe/subdomain.js"></script>-->
 	</head>
-<!----------------------------------------------------------------------------->
-	<body onload="Global.activateTheme();Strings.injectText();" class="grid">
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+	<body class="grid">
 		<div style="grid-area:1/1/span 1/span 2" id="header"></div>
 		<div style="grid-area:2/1/span 1/span 1" id="sidebar"></div>
 		<p   style="grid-area:2/2/span 1/span 1" id="placeholderShort"></p>
