Fixed a bug in index.html, added support for Theodic, added padding to grid

--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -15,16 +15,16 @@
 		<!-- Global    --><meta name="viewport"      content="width=device-width,initial-scale=1.0"/>
 		<!-- Subdomain --><!--<base                       target="_blank"       href="https://www.theodia.tech"/>-->
 		<!-- Subdomain --><link   rel="icon"            type="image/x-icon"   href="favicon.ico"/>
-		<!-- Global    --><link   rel="stylesheet"      type="text/css"        src="_thm/global.css"/>
+		<!-- Global    --><link   rel="stylesheet"      type="text/css"       href="_thm/global.css"/>
 		<!-- Global    --><script                       type="text/javascript" src="_exe/global.js"></script>
 		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"        src="_thm/subdomain.css"/>-->
 		<!-- Subdomain --><!--<script                       type="text/javascript" src="_exe/subdomain.js"></script>-->
 	</head>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body class="grid">
-		<div style="grid-area:1/1/span 1/span 2" id="header"></div>
-		<div style="grid-area:2/1/span 1/span 1" id="sidebar"></div>
-		<p   style="grid-area:2/2/span 1/span 1" id="placeholderShort"></p>
-		<div style="grid-area:3/1/span 1/span 2" id="footer"></div>
+		<div style="grid-area:1/1/span 1/span 2" id="header">test</div>
+		<div style="grid-area:2/1/span 1/span 1" id="sidebar">test</div>
+		<p   style="grid-area:2/2/span 1/span 1" id="placeholderShort" class="th-sans"></p>
+		<div style="grid-area:3/1/span 1/span 2" id="footer">test</div>
 	</body>
 </html>
