--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -22,9 +22,11 @@
 	</head>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body class="grid">
-		<div style="grid-area:1/1/span 1/span 2" id="header">test</div>
-		<div style="grid-area:2/1/span 1/span 1" id="sidebar">test</div>
-		<p   style="grid-area:2/2/span 1/span 1" id="placeholderShort" class="th-sans"></p>
-		<div style="grid-area:3/1/span 1/span 2" id="footer">test</div>
+		<div style="grid-area:1/1/span 1/span 2" id="header"></div>
+		<div style="grid-area:2/1/span 1/span 1" id="sidebar"></div>
+		<div style="grid-area:2/2/span 1/span 1" class="mar-all-1-1">
+			<p class="th-sans" id="placeholderShort"></p>
+		</div>
+		<div style="grid-area:3/1/span 1/span 2" id="footer"></div>
 	</body>
 </html>
