Cleaned up some code and performed some minor revisions

--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -29,12 +29,64 @@
 		<!-- Subdomain --><!--<script                       type="text/javascript" src="_exe/subdomain.js"></script>-->
 	</head>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-	<body class="grid">
-		<div style="grid-area:1/1/span 1/span 2" id="header"></div>
-		<div style="grid-area:2/1/span 1/span 1" id="sidebar"></div>
-		<div style="grid-area:2/2/span 1/span 1" class="mar-all-1-1">
+	<body class="layout">
+		<div class="layout-header" id="header"></div>
+		<div class="layout-footer" id="footer"></div>
+		<div class="layout-body">
 			<p class="th-sans" id="placeholderShort"></p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
+			<p>test</p>
 		</div>
-		<div style="grid-area:3/1/span 1/span 2" id="footer"></div>
 	</body>
 </html>
