--- a/src/index.xhtml
+++ b/src/index.xhtml
@@ -5,28 +5,19 @@
 	 LGPL 3.0. -->
 <html lang="en-us" xml:lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<!-- I N F O   F O R   R O B O T S -->
-		<!-- Global    --><meta                      charset="utf-8"/>
-		<!-- Global    --><meta name="revisit-after" content="144 day"/>
-		<!-- Page      --><meta name="robots"        content="index, follow"/>
-		<!-- Subdomain --><!--<base                       target="_blank"       href="https://www.theodia.tech"/>-->
-		<!-- M E T A D A T A -->
-		<!-- Subdomain --><meta name="keywords"      content="Theodia, micronation, technocracy"/>
-		<!-- Subdomain --><meta name="description"   content="The official website of the Technocratic Republic of Theodia"/>
-		<!-- Page      --><title>Theodia, the Technocratic Republic - Home</title>
-		<!-- Global    --><link  rel="author"                                   href="humans.txt"/>
-		<!-- I C O N S -->
-		<!-- Subdomain --><link  rel="icon"             type="image/x-icon"     href="favicon.ico"/>
-		<!-- Subdomain --><link  rel="manifest"                                 href="site.webmanifest">
-		<!-- Subdomain --><link  rel="apple-touch-icon"                         href="favicon.png">
-		<!-- V I E W S -->
-		<!-- Global    --><meta                      content="ie=edge"    http-equiv="x-ua-compatible">
-		<!-- Global    --><meta name="viewport"      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-		<!-- I N C L U D E S -->
-		<!-- Global    --><link  rel="stylesheet"       type="text/css"       href="_thm/global.css"/>
-		<!-- Global    --><script                       type="text/javascript" src="_exe/global.js"></script>
-		<!-- Subdomain --><!--<link   rel="stylesheet"      type="text/css"        src="_thm/subdomain.css"/>-->
-		<!-- Subdomain --><!--<script                       type="text/javascript" src="_exe/subdomain.js"></script>-->
+		<!--#include virtual="_head-robots-global.html"-->
+		<meta name="robots"        content="index, follow"/>
+		<!--#include virtual="_head-robots-subdomain.html"-->
+
+		<!--#include virtual="_head-metadata-subdomain.html"-->
+		<title>Theodia, the Technocratic Republic - Home</title>
+		<!--#include virtual="_head-metadata-global.html"-->
+
+		<!--#include virtual="_head-icons-subdomain.html"-->
+		<!--#include virtual="_head-views-global.html"-->
+
+		<!--#include virtual="_head-includes-global.html"-->
+		<!--#include virtual="_head-includes-subdomain.html"-->
 	</head>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body class="layout">
