Finished converting legacy code

--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -1,83 +1,26 @@
 <!DOCTYPE html>
-<!-- Copyright © from the date of the last git commit to this file in this git
-     branch, by all persons with git blame to this file in this git branch, per
-	 the terms of the GNU AGPL 3.0 with the additional allowances of the GNU
-	 LGPL 3.0. -->
 <html lang="en-us" xml:lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<!--#include virtual="_head-robots-global.html"-->
-		<meta name="robots"        content="index, follow"/>
-		<!--#include virtual="_head-robots-subdomain.html"-->
-
-		<!--#include virtual="_head-metadata-subdomain.html"-->
+		<meta charset="utf-8" />
+		<!-- R O B O T S -->
+		<meta name="revisit-after" content="144 day" />
+		<meta name="robots" content="index, follow" />
+		<!-- M E T A D A T A -->
 		<title>Theodia, the Technocratic Republic - Home</title>
-		<!--#include virtual="_head-metadata-global.html"-->
-
-		<!--#include virtual="_head-icons-subdomain.html"-->
-		<!--#include virtual="_head-views-global.html"-->
-
-		<!--#include virtual="_head-includes-global.html"-->
-		<!--#include virtual="_head-includes-subdomain.html"-->
+		<meta name="keywords" content="Theodia, micronation, technocracy" />
+		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
+		<link rel="author" href="humans.txt" />
+		<!-- I C O N S -->
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="manifest" href="manifest.json">
+		<link rel="apple-touch-icon" href="favicon.png">
+		<!-- V I E W S -->
+		<meta content="ie=edge" http-equiv="x-ua-compatible">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+		<!-- I N C L U D E S -->
 	</head>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-	<body class="layout">
-		<div class="layout-header" id="header"></div>
-		<div class="layout-footer" id="footer"></div>
-		<div class="layout-body">
-			<p class="th-sans" id="placeholderShort"></p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-			<p>test</p>
-		</div>
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+	<body>
+		<app-root></app-root>
 	</body>
 </html>
