--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -6,7 +6,7 @@
 		<meta name="revisit-after" content="144 day" />
 		<meta name="robots" content="index, follow" />
 		<!-- M E T A D A T A -->
-		<title>Theodia, the Technocratic Republic - Home</title>
+		<title>Theodia, the Technocratic Republic</title>
 		<meta name="keywords" content="Theodia, micronation, technocracy" />
 		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
 		<link rel="author" href="humans.txt" />
