--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -12,10 +12,10 @@
 		<link rel="author" href="humans.txt" />
 		<!-- I C O N S -->
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="manifest" href="manifest.json">
-		<link rel="apple-touch-icon" href="favicon.png">
+		<link rel="manifest" href="manifest.json" />
+		<link rel="apple-touch-icon" href="favicon.png" />
 		<!-- V I E W S -->
-		<meta content="ie=edge" http-equiv="x-ua-compatible">
+		<meta content="ie=edge" http-equiv="x-ua-compatible" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 		<!-- I N C L U D E S -->
 	</head>
