--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="en-us" xml:lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-US" xml:lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta charset="utf-8" />
-		<!-- R O B O T S -->
+        <!-- GENERAL -->
+        <meta charset="utf-8" />
+        <base target="_blank" href="/" />
+        <link rel="manifest" type="text/json" href="/res/manifest.json" />
+
+        <!-- ROBOTS -->
+		<meta name="robots"        content="index, follow" />
 		<meta name="revisit-after" content="144 day" />
-		<meta name="robots" content="index, follow" />
-		<!-- M E T A D A T A -->
-		<title>Theodia, the Technocratic Republic</title>
+
+        <!-- INFO -->
 		<meta name="keywords" content="Theodia, micronation, technocracy" />
+		<title>Theodia, the Technocratic Republic</title>
 		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
-		<link rel="author" href="humans.txt" />
-		<!-- I C O N S -->
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="manifest" href="manifest.json" />
-		<link rel="apple-touch-icon" href="favicon.png" />
-		<!-- V I E W S -->
-		<meta content="ie=edge" http-equiv="x-ua-compatible" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-		<!-- I N C L U D E S -->
+        <link rel="author" type="text/plain" href="/res/humans.txt" />
+
+        <!-- METASTYLING -->
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport"              content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+        <meta name="theme-color"           content="#585858" />
+		<meta name="background-color"      content="#212121" />
+
+        <!-- DYNAMIC -->
 	</head>
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body>
+        <noscript>This website requires JavaScript to work.</noscript>
 		<app-root></app-root>
 	</body>
 </html>
