Further fleshed out the webmanifest

--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -4,7 +4,7 @@
         <!-- GENERAL -->
         <meta charset="utf-8" />
         <base target="_blank" href="/" />
-        <link rel="manifest" type="text/json" href="/res/manifest.json" />
+        <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
 
         <!-- ROBOTS -->
 		<meta name="robots"        content="index, follow" />
@@ -14,13 +14,13 @@
 		<meta name="keywords" content="Theodia, micronation, technocracy" />
 		<title>Theodia, the Technocratic Republic</title>
 		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
-        <link rel="author" type="text/plain" href="/res/humans.txt" />
+        <link rel="author" type="text/plain" href="/humans.txt" />
 
         <!-- METASTYLING -->
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
         <meta name="viewport"              content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-        <meta name="theme-color"           content="#585858" />
 		<meta name="background-color"      content="#212121" />
+        <meta name="theme-color"           content="#585858" />
 
         <!-- DYNAMIC -->
 	</head>
