--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -4,7 +4,6 @@
         <!-- GENERAL -->
         <meta charset="utf-8" />
         <base target="_blank" href="/" />
-        <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
 
         <!-- ROBOTS -->
 		<meta name="robots"        content="index, follow" />
@@ -15,6 +14,10 @@
 		<title>Theodia, the Technocratic Republic</title>
 		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
         <link rel="author" type="text/plain" href="/humans.txt" />
+
+        <!-- MANIFESTS -->
+        <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
+        <meta name="msapplication-config" type="application/xml" content="/browserconfig.xml" />
 
         <!-- METASTYLING -->
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
