--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -23,7 +23,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
         <meta name="viewport"              content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 		<meta name="background-color"      content="#212121" />
-        <meta name="theme-color"           content="#585858" />
+        <meta name="theme-color"           content="#9a4d9a" />
 
         <!-- DYNAMIC -->
 	</head>
