Expanded and refactored site metadata

--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-US" xml:lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-        <!-- GENERAL -->
+        <!-- EARLY -->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="utf-8" />
         <base target="_blank" href="/" />
 
-        <!-- ROBOTS -->
+        <!-- SEO -->
 		<meta name="robots"        content="index, follow" />
-		<meta name="revisit-after" content="144 day" />
-
-        <!-- INFO -->
-		<meta name="keywords" content="Theodia, micronation, technocracy" />
+        <meta name="revisit-after" content="144 day" />
+		<meta name="keywords"      content="Theodia, micronation, technocracy" />
 		<title>Theodia, the Technocratic Republic</title>
-		<meta name="description" content="The official website of the Technocratic Republic of Theodia" />
-        <link rel="author" type="text/plain" href="/humans.txt" />
+        <meta name="description"   content="The official website of the Technocratic Republic of Theodia" />
 
-        <!-- MANIFESTS -->
-        <link rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
-        <meta name="msapplication-config" type="application/xml" content="/browserconfig.xml" />
+        <!-- MISC -->
+        <link  rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
+		<meta name="background-color" content="#212121" />
+        <meta name="theme-color"      content="#9a4d9a" />
+        <meta name="viewport"         content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+        <link  rel="author"   type="text/plain"                href="/humans.txt" />
 
-        <!-- METASTYLING -->
-        <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <meta name="viewport"              content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-		<meta name="background-color"      content="#212121" />
-        <meta name="theme-color"           content="#9a4d9a" />
+        <!-- ICONS (STANDARD) -->
+        <link rel="icon" sizes="196x196" type="image/png" href="/res/ico/tran/196.png" />
+        <link rel="icon" sizes="128x128" type="image/png" href="/res/ico/tran/128.png" />
+        <link rel="icon" sizes="96x96"   type="image/png" href="/res/ico/tran/96.png"  />
+        <link rel="icon" sizes="32x32"   type="image/png" href="/res/ico/tran/32.png"  />
+        <link rel="icon" sizes="16x16"   type="image/png" href="/res/ico/tran/16.png"  />
+
+        <!-- ICONS (MICROSOFT) -->
+        <meta name="msapplication-config"            type="application/xml" content="/browserconfig.xml"        />
+        <meta name="msapplication-square70x70logo"   type="image/png"       content="/res/ico/opaq/70.png"      />
+        <meta name="msapplication-square150x150logo" type="image/png"       content="/res/ico/opaq/150.png"     />
+        <meta name="msapplication-wide310x150logo"   type="image/png"       content="/res/ico/opaq/310x150.png" />
+        <meta name="msapplication-square310x310logo" type="image/png"       content="/res/ico/opaq/310.png"     />
+        <meta name="msapplication-TileImage"         type="image/png"       content="/res/ico/tran/144.png"     />
+        <meta name="msapplication-TileColor"                                content="#9a4d9a"                   />
+
+        <!-- ICONS (APPLE) -->
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" type="image/png" href="/res/ico/tran/152.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png" href="/res/ico/tran/144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" type="image/png" href="/res/ico/tran/120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png" href="/res/ico/tran/114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76"   type="image/png" href="/res/ico/tran/76.png"  />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72"   type="image/png" href="/res/ico/tran/72.png"  />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60"   type="image/png" href="/res/ico/tran/60.png"  />
+        <link rel="apple-touch-icon-precomposed" sizes="57x57"   type="image/png" href="/res/ico/tran/57.png"  />
 
         <!-- DYNAMIC -->
 	</head>
