--- a/frontend/src/index.xhtml
+++ b/frontend/src/index.xhtml
@@ -17,15 +17,17 @@
         <link  rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
 		<meta name="background-color" content="#212121" />
         <meta name="theme-color"      content="#9a4d9a" />
-        <meta name="viewport"         content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+        <meta name="viewport"         content="width=device-width,initial-scale=1.0" />
         <link  rel="author"   type="text/plain"                href="/humans.txt" />
 
         <!-- ICONS (STANDARD) -->
+        <!-- TODO: Add SVG favicon -->
         <link rel="icon" sizes="196x196" type="image/png" href="/res/ico/tran/196.png" />
         <link rel="icon" sizes="128x128" type="image/png" href="/res/ico/tran/128.png" />
         <link rel="icon" sizes="96x96"   type="image/png" href="/res/ico/tran/96.png"  />
         <link rel="icon" sizes="32x32"   type="image/png" href="/res/ico/tran/32.png"  />
         <link rel="icon" sizes="16x16"   type="image/png" href="/res/ico/tran/16.png"  />
+        <!-- TODO: Add ICO favicon -->
 
         <!-- ICONS (MICROSOFT) -->
         <meta name="msapplication-config"            type="application/xml" content="/browserconfig.xml"        />
