--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,12 +3,13 @@
 	<head>
         <!-- EARLY -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type"    content="text/html"/>
         <meta charset="utf-8" />
         <base target="_blank" href="/" />
 
         <!-- SEO -->
-		<meta name="robots"        content="index, follow" />
-        <meta name="revisit-after" content="144 day" />
+        <link  rel="robots" type="text/plain" href="/robots.txt" />
+        <meta name="revisit-after" content="90 day" />
 		<meta name="keywords"      content="Theodia, micronation, technocracy" />
 		<title>Theodia, the Technocratic Republic</title>
         <meta name="description"   content="The official website of the Technocratic Republic of Theodia" />
@@ -21,13 +22,13 @@
         <link  rel="author"   type="text/plain"                href="/humans.txt" />
 
         <!-- ICONS (STANDARD) -->
-        <!-- TODO: Add SVG favicon -->
-        <link rel="icon" sizes="196x196" type="image/png" href="/res/ico/tran/196.png" />
-        <link rel="icon" sizes="128x128" type="image/png" href="/res/ico/tran/128.png" />
-        <link rel="icon" sizes="96x96"   type="image/png" href="/res/ico/tran/96.png"  />
-        <link rel="icon" sizes="32x32"   type="image/png" href="/res/ico/tran/32.png"  />
-        <link rel="icon" sizes="16x16"   type="image/png" href="/res/ico/tran/16.png"  />
-        <!-- TODO: Add ICO favicon -->
+        <link rel="icon mask-icon" sizes="any"     type="image/svg+xml" href="/res/ico/favicon.svg"  />
+        <link rel="shortcut icon"                  type="image/x-icon"  href="/res/ico/favicon.ico"  />
+        <link rel="icon"           sizes="196x196" type="image/png"     href="/res/ico/tran/196.png" />
+        <link rel="icon"           sizes="128x128" type="image/png"     href="/res/ico/tran/128.png" />
+        <link rel="icon"           sizes="96x96"   type="image/png"     href="/res/ico/tran/96.png"  />
+        <link rel="icon"           sizes="32x32"   type="image/png"     href="/res/ico/tran/32.png"  />
+        <link rel="icon"           sizes="16x16"   type="image/png"     href="/res/ico/tran/16.png"  />
 
         <!-- ICONS (MICROSOFT) -->
         <meta name="msapplication-config"            type="application/xml" content="/browserconfig.xml"        />
@@ -39,22 +40,22 @@
         <meta name="msapplication-TileColor"                                content="#9a4d9a"                   />
 
         <!-- ICONS (APPLE) -->
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" type="image/png" href="/res/ico/tran/152.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png" href="/res/ico/tran/144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" type="image/png" href="/res/ico/tran/120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png" href="/res/ico/tran/114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76"   type="image/png" href="/res/ico/tran/76.png"  />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72"   type="image/png" href="/res/ico/tran/72.png"  />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60"   type="image/png" href="/res/ico/tran/60.png"  />
-        <link rel="apple-touch-icon-precomposed" sizes="57x57"   type="image/png" href="/res/ico/tran/57.png"  />
+        <link rel="apple-touch-icon" sizes="152x152" type="image/png" href="/res/ico/tran/152.png" />
+        <link rel="apple-touch-icon" sizes="144x144" type="image/png" href="/res/ico/tran/144.png" />
+        <link rel="apple-touch-icon" sizes="120x120" type="image/png" href="/res/ico/tran/120.png" />
+        <link rel="apple-touch-icon" sizes="114x114" type="image/png" href="/res/ico/tran/114.png" />
+        <link rel="apple-touch-icon" sizes="76x76"   type="image/png" href="/res/ico/tran/76.png"  />
+        <link rel="apple-touch-icon" sizes="72x72"   type="image/png" href="/res/ico/tran/72.png"  />
+        <link rel="apple-touch-icon" sizes="60x60"   type="image/png" href="/res/ico/tran/60.png"  />
+        <link rel="apple-touch-icon" sizes="57x57"   type="image/png" href="/res/ico/tran/57.png"  />
 
         <!-- LIBRARIES -->
         <!-- TODO:  Self-host -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css&#63;family=Roboto:300,400,500&#38;display&#61;swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon&#63;family=Material+Icons">
 
         <!-- DYNAMIC -->
-</head>
+    </head>
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body>
         <noscript>This website requires JavaScript to work.</noscript>
