--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="">
 	<head>
         <!-- EARLY -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,10 +9,11 @@
 
         <!-- SEO -->
         <link  rel="robots" type="text/plain" href="/robots.txt" />
+        <meta name="robots"        content="" />
         <meta name="revisit-after" content="90 day" />
-		<meta name="keywords"      content="Theodia, micronation, technocracy" />
-		<title>Theodia, the Technocratic Republic</title>
-        <meta name="description"   content="The official website of the Technocratic Republic of Theodia" />
+		<meta name="keywords"      content="" />
+		<title></title>
+        <meta name="description"   content="" />
 
         <!-- MISC -->
         <link  rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
