Added a style check to index.html

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -59,6 +59,7 @@
     </head>
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 	<body>
+        <nostyle>Styles are not loaded.</nostyle>
         <noscript>This website requires JavaScript to work.</noscript>
 		<app-root></app-root>
 	</body>
