--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,8 +12,8 @@
         <meta name="robots"        content="" />
         <meta name="revisit-after" content="90 day" />
 		<meta name="keywords"      content="" />
-		<title></title>
-        <meta name="description"   content="" />
+		<title>Loading...</title>
+        <meta name="description"   content="This page is currently loading." />
 
         <!-- MISC -->
         <link  rel="manifest" type="application/manifest+json" href="/manifest.webmanifest" />
