--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -61,6 +61,6 @@
 	<body>
         <nostyle>Styles are not loaded.</nostyle>
         <noscript>This website requires JavaScript to work.</noscript>
-		<app-root></app-root>
+		<root></root>
 	</body>
 </html>
