Material themes work now

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -58,7 +58,7 @@
         <!-- DYNAMIC -->
     </head>
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-	<body>
+	<body class="dark-theme">
         <nostyle>Styles are not loaded.</nostyle>
         <noscript>This website requires JavaScript to work.</noscript>
 		<root></root>
