Fix unclosed tags

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -52,8 +52,8 @@
 
         <!-- LIBRARIES -->
         <!-- TODO:  Self-host -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css&#63;family=Roboto:300,400,500&#38;display&#61;swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon&#63;family=Material+Icons">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css&#63;family=Roboto:300,400,500&#38;display&#61;swap"></link>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon&#63;family=Material+Icons"></link>
 
         <!-- DYNAMIC -->
     </head>
